BE-prod.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portal-backend
  namespace: portal-backend-2622-backend
  labels:
    app: portal-backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: portal-backend
  template:
    metadata:
      labels:
        app: portal-backend
    spec:
      containers:
        - name: springbootapp
          image: eu.gcr.io/prj-ext-prod-dtol-gcp-dr/portal-backend/dtol-be:latest
          imagePullPolicy: "Always"
          ports:
            - containerPort: 8080
#      initContainers:
#        - name: init-elasticsearch
#          image: busybox
#          command: ['sh', '-c', 'until nslookup elasticsearch.elasticsearch.svc.cluster.local; do echo waiting for myservice; sleep 2; done;']
      imagePullSecrets:
        - name: gcp-cloud
