kubernetes.template.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: _APP_NAME_
  labels:
    app: _APP_NAME_
spec:
  replicas: 1
  selector:
    matchLabels:
      app: _APP_NAME_

  # Pod template
  template:
    metadata:
      labels:
        app: _APP_NAME_
    spec:
      containers:
        - name: test
          image: _IMAGE_
          imagePullPolicy: "Always"
          ports:
            - containerPort: 80
      imagePullSecrets:
        - name: gitlab-registry
---
apiVersion: v1
kind: Service
metadata:
  name: _APP_NAME_
  labels:
    app: _APP_NAME_
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
      app: _APP_NAME_

---
apiVersion: v1
kind: Service
metadata:
  name: frontendsvc
  namespace: portal-frontend-2494-frontend
spec:
  type: ExternalName
  externalName: portal-backend.portal-backend-2622-backend.svc.cluster.local
  ports:
  - port: 8080
